--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "net9-auth"
+    "name": "accounts9"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.1"
+      "express": "2.5.9"
     , "jade": "0.19.0"
-    , "less": "1.1.5"
-    , "mongoose": "2.4.1"
-    , "ldapjs": "0.3.4"
+    , "mongoose": "2.5.13"
+    , "connect-mongo": "0.1.7"
+    , "ldapjs": "0.4.8"
   }
 }
