--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "accounts9"
-  , "version": "0.0.2"
+  , "version": "0.0.3"
   , "private": true
   , "dependencies": {
-      "express": "2.5.10"
-    , "ejs": "0.7.2"
-    , "mongoose": "2.7.1"
-    , "connect-mongo": "0.1.9"
+      "express": "2.5.11"
+    , "ejs": "0.8.2"
+    , "mongoose": "3.1.2"
+    , "connect-mongo": "0.2.0"
+	, "oauth": "0.9.8"
   }
 }
