--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-    "name": "accounts9"
-  , "version": "0.0.3"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.11"
-    , "ejs": "0.8.2"
-    , "mongoose": "3.1.2"
-    , "connect-mongo": "0.2.0"
-	, "oauth": "0.9.8"
-	, "async": "0.1.22"
-  }
+    "name": "accounts9",
+    "version": "0.0.4",
+    "private": true,
+    "scripts": {
+      "start": "continuation app.coffee -e -c"
+    },
+    "dependencies": {
+      "express": "2.5.11",
+      "ejs": "0.8.3",
+      "mongoose": "3.3.1",
+      "connect-mongo": "0.2.0",
+  	  "oauth": "0.9.8",
+  	  "async": "0.1.22"
+    }
 }
