--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "ejs": "0.8.3",
       "mongoose": "3.3.1",
       "connect-mongo": "0.2.0",
-  	  "oauth": "0.9.8",
-  	  "async": "0.1.22"
+      "oauth": "0.9.8",
+      "async": "0.1.22",
+      "less": "1.3.3",
+      "connect-assets": "2.4.1"
     }
 }
