--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "oauth": "0.9.10",
       "async": "0.1.22",
       "less": "1.3.3",
-      "connect-assets": "2.4.1"
+      "connect-assets": "2.4.1",
+      "weibo": "0.6.8"
     }
 }
