--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dependencies": {
       "express": "2.5.11",
       "ejs": "0.8.3",
-      "mongoose": "3.6.0",
+      "mongoose": "~3.6.0",
       "connect-mongo": "0.2.0",
       "oauth": "0.9.10",
       "async": "0.1.22",
       "less": "1.3.3",
       "connect-assets": "2.4.1",
-      "weibo": "0.6.8"
+      "weibo": "0.6.8",
+      "continuation" : "0.1.3",
+      "coffee-script" : ""
     }
 }
