--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
       "connect-assets": "2.4.1",
       "weibo": "0.6.8",
       "continuation" : "0.1.3",
+      "email-templates" : "1.1.2",
+      "nodemailer": "1.0.0",
+      "nodemailer-direct-transport": "1.0.0",
       "coffee-script" : ""
     }
 }
