--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-    "name": "accounts9",
-    "version": "0.0.5",
-    "private": true,
-    "scripts": {
-      "start": "continuation app.coffee -e -c"
-    },
-    "dependencies": {
-      "express": "2.5.11",
-      "ejs": "0.8.3",
-      "mongoose": "~3.6.0",
-      "connect-mongo": "0.2.0",
-      "oauth": "0.9.10",
-      "async": "0.1.22",
-      "less": "1.3.3",
-      "connect-assets": "2.4.1",
-      "weibo": "0.6.8",
-      "continuation" : "0.1.3",
-      "email-templates" : "1.1.2",
-      "nodemailer": "1.0.0",
-      "nodemailer-direct-transport": "1.0.0",
-      "coffee-script" : ""
-    }
+  "name": "accounts9",
+  "version": "0.0.6",
+  "private": true,
+  "scripts": {
+    "start": "continuation app.coffee -e -c"
+  },
+  "dependencies": {
+    "async": "0.1.22",
+    "body-parser": "~1.8.4",
+    "coffee-script": "",
+    "connect-assets": "2.4.1",
+    "connect-mongo": "~0.4.1",
+    "continuation": "0.1.3",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "ejs": "~0.8.5",
+    "email-templates": "1.1.2",
+    "errorhandler": "^1.3.3",
+    "express": "~4.9.0",
+    "express-session": "^1.9.1",
+    "less": "1.3.3",
+    "method-override": "^2.3.1",
+    "mongoose": "^3.8.18",
+    "morgan": "~1.3.0",
+    "nodemailer": "1.0.0",
+    "nodemailer-direct-transport": "1.0.0",
+    "oauth": "0.9.10",
+    "serve-favicon": "~2.1.3",
+    "weibo": "0.6.8"
+  }
 }
