--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override": "^2.3.1",
     "mongoose": "^3.8.18",
     "morgan": "~1.3.0",
+    "node.extend": "^1.1.3",
     "nodemailer": "1.0.0",
     "nodemailer-direct-transport": "1.0.0",
     "oauth": "0.9.10",
