--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.8.4",
     "coffee-script": "",
     "connect-assets": "2.4.1",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "~0.4.1",
     "continuation": "0.1.3",
     "cookie-parser": "~1.3.3",
