--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "email-templates": "1.1.2",
     "errorhandler": "^1.3.3",
     "express": "~4.9.0",
+    "express-partials": "^0.3.0",
     "express-session": "^1.9.1",
     "less": "1.3.3",
     "method-override": "^2.3.1",
