--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
     "express-session": "^1.9.1",
+    "ldapjs": "0.7.1",
     "less": "1.3.3",
     "method-override": "^2.3.1",
     "mongoose": "^3.8.18",
