--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "accounts9",
   "version": "0.0.6",
   "private": true,
@@ -24,7 +24,7 @@
     "ldapjs": "0.7.1",
     "less": "1.3.3",
     "method-override": "^2.3.1",
-    "mongoose": "^3.8.18",
+    "mongoose": "3.8.18",
     "morgan": "~1.3.0",
     "node.extend": "^1.1.3",
     "nodemailer": "1.0.0",
